Mudancas na logica do aluguel e sessoes