@@ -1,75 +1,64 @@
 package com.services;
 
-import com.database.model.Aluguel;
-import com.database.model.Artista;
-import com.database.model.Peca;
-import com.database.model.RegraPreco;
-import com.database.repository.AluguelDao;
-import com.database.repository.ArtistaDao;
-import com.database.repository.PecaDao;
-import com.database.repository.RegraPrecoDao;
+import com.database.model.*;
+import com.database.repository.*;
 import com.dto.requests.ContratoAluguelRequest;
 import com.dto.response.ContratoAluguelResponse;
 import com.exception.NotFoundException;
-import jakarta.persistence.EntityNotFoundException;
+import com.services.strategy.sessao.ValidadorSessao;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.math.BigDecimal;
+import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class AluguelService {
 
+    // Dependências de acesso a dados (Módulos de baixo nível)
+    private final ArtistaService artistaService;
+    private final PecaService pecaService;
+    private final TeatroService teatroService;
+    private final SessaoService sessaoService;
     private final AluguelDao aluguelDao;
-    private final RegraPrecoDao regraPrecoRepository;
-    private final PecaDao pecaRepository;
-    private final ArtistaDao artistaRepository;
 
-    @Transactional
-    public void criar(ContratoAluguelRequest request, Long idTeatro) throws NotFoundException {
+    private final List<ValidadorSessao> validadores;
 
-        RegraPreco regraPreco = regraPrecoRepository.findByIdAndTeatro_Id(request.idRegraPreco(), idTeatro)
-                .orElseThrow(() -> new NotFoundException("Regra de Preço não encontrada para o ID informado."));
 
-        Peca peca = pecaRepository.findByIdAndTeatro_id(request.idPeca(), idTeatro)
-                .orElseThrow(() -> new NotFoundException("Peça não encontrada para o ID informado."));
+    @Transactional // Garante que, se der erro em qualquer dia, nada será salvo
+    public void cadastrar(ContratoAluguelRequest request, Long idTeatro) {
 
-        Artista artista = artistaRepository.findById(request.idArtista())
-                .orElseThrow(() -> new NotFoundException("Artista não encontrado para o ID informado."));
+        Artista artista = artistaService.buscarPorEmail(request.emailArtista());
 
-        Aluguel contrato = Aluguel.builder()
-                .regraPreco(regraPreco)
-                .peca(peca)
+        Peca peca = pecaService.buscarPeca(request.idPeca());
+
+        Teatro teatro = teatroService.getTeatro(idTeatro);
+
+        List<Sessao> sessoes = sessaoService.cadastrarSessoes(request, teatro);
+
+        Aluguel aluguel = Aluguel.builder()
                 .artista(artista)
-                .data(request.data())
+                .sessoes(sessoes)
+                .peca(peca)
+                .teatro(teatro)
                 .build();
-
-        aluguelDao.save(contrato);
+        aluguelDao.save(aluguel);
 
     }
 
-    @Transactional(readOnly = true)
-    public ContratoAluguelResponse buscarPorId(Long id, Long idTeatro) throws NotFoundException {
-        Aluguel contrato = aluguelDao.findByIdAndPeca_Teatro_Id(id, idTeatro)
-                .orElseThrow(() -> new NotFoundException("Contrato de aluguel não encontrado."));
-        return new ContratoAluguelResponse(contrato);
+    public ContratoAluguelResponse buscarContrato(Long id, Long idTeatro) {
+        return new ContratoAluguelResponse(aluguelDao.findByIdAndTeatro_Id(id, idTeatro)
+                .orElseThrow(()->new NotFoundException("Contrato não existe:")));
     }
 
-    @Transactional(readOnly = true)
-    public List<ContratoAluguelResponse> listarTodos(Long idTeatro) {
-        return aluguelDao.findAllByPeca_Teatro_Id(idTeatro).stream()
+    public List<ContratoAluguelResponse> buscarListaContrato(Long idTeatro) {
+        return aluguelDao.findByTeatro_Id(idTeatro)
+                .stream()
                 .map(ContratoAluguelResponse::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    @Transactional
-    public void deletar(Long id, Long idTeatro) {
-        if (!aluguelDao.existsByIdAndPeca_Teatro_Id(id, idTeatro)) {
-            throw new EntityNotFoundException("Contrato de aluguel não encontrado para deleção.");
-        }
-        aluguelDao.deleteById(id);
-    }
 }
